# apl-primer

./: AUTHORS  Changelog.md  DEPENDENCIES.txt  Makefile.am  NEWS  README.md  README.org  configure.ac  guix.scm
doc/: algorithms.org  algorithms.texi  apl-primer.texi
